# pop-note

./: README.md  pyproject.toml
pop_note/: main.py
